src/styles/global.scss
@use "uswds-core" with (
    $theme-image-path: "../uswds/img",
    $theme-font-path: "../uswds/fonts",
    $theme-show-compile-warnings: false,
    $theme-show-notifications: false,
    $theme-focus-color: "blue-50v",
    $theme-global-paragraph-styles: true,
    $theme-global-link-styles: true,
    $theme-global-content-styles: true,
    $theme-utility-breakpoints: (
      "card": false,
      "card-lg": true,
      "mobile": true,
      "mobile-lg": true,
      "tablet": true,
      "tablet-lg": true,
      "desktop": true,
      "desktop-lg": true,
      "widescreen": true
    ),
  );

// Documentation states that this next line is needed, however it cause the build to break
// @forward 'uswds'; 

@import "~@trussworks/react-uswds/lib/index.css";

/**
Some USWDS components have pseudo elements (::before and ::after) that use the mask CSS property. This property does not always render in Chrome 108 (seems to work in FF  and Safari)
*/

// This control the icon in the alerts
.usa-alert--info:before {
    -webkit-mask: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBkPSJNMTIgMkM2LjQ4IDIgMiA2LjQ4IDIgMTJzNC40OCAxMCAxMCAxMCAxMC00LjQ4IDEwLTEwUzE3LjUyIDIgMTIgMnptMSAxNWgtMnYtNmgydjZ6bTAtOGgtMlY3aDJ2MnoiLz48L3N2Zz4=) no-repeat center/contain;
    mask: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBkPSJNMTIgMkM2LjQ4IDIgMiA2LjQ4IDIgMTJzNC40OCAxMCAxMCAxMCAxMC00LjQ4IDEwLTEwUzE3LjUyIDIgMTIgMnptMSAxNWgtMnYtNmgydjZ6bTAtOGgtMlY3aDJ2MnoiLz48L3N2Zz4=) no-repeat center/contain;
}

// This sets the down arrow in the gov banner
.usa-banner__button::after {
    -webkit-mask: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBkPSJNMTYuNTkgOC41OSAxMiAxMy4xNyA3LjQxIDguNTkgNiAxMGw2IDYgNi02eiIvPjwvc3ZnPg==) no-repeat center/contain;
    mask: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBkPSJNMTYuNTkgOC41OSAxMiAxMy4xNyA3LjQxIDguNTkgNiAxMGw2IDYgNi02eiIvPjwvc3ZnPg==) no-repeat center/contain;
}

// This sets the up arrow in the gov banner
.usa-banner__button[aria-expanded=true]::after{
  -webkit-mask: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBmaWxsPSJub25lIiBkPSJNMCAwaDI0djI0SDB6Ii8+PHBhdGggZD0ibTEyIDgtNiA2IDEuNDEgMS40MUwxMiAxMC44M2w0LjU5IDQuNThMMTggMTR6Ii8+PC9zdmc+) no-repeat center/contain;
  mask: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBmaWxsPSJub25lIiBkPSJNMCAwaDI0djI0SDB6Ii8+PHBhdGggZD0ibTEyIDgtNiA2IDEuNDEgMS40MUwxMiAxMC44M2w0LjU5IDQuNThMMTggMTR6Ii8+PC9zdmc+) no-repeat center/contain;
}



/* 
******************************
*      HEADER STYLES
****************************** 
*/

// This sets the down arrow in the scorecard dropdown nav
.usa-accordion__button.usa-nav__link span::after{
  -webkit-mask: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBmaWxsPSJub25lIiBkPSJNMCAwaDI0djI0SDB6Ii8+PHBhdGggZD0iTTE2LjU5IDguNTkgMTIgMTMuMTcgNy40MSA4LjU5IDYgMTBsNiA2IDYtNnoiLz48L3N2Zz4=) no-repeat center/contain;
  mask: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBmaWxsPSJub25lIiBkPSJNMCAwaDI0djI0SDB6Ii8+PHBhdGggZD0iTTE2LjU5IDguNTkgMTIgMTMuMTcgNy40MSA4LjU5IDYgMTBsNiA2IDYtNnoiLz48L3N2Zz4=) no-repeat center/contain;
}

// This sets the up arrow in the scorecard dropdown nav
.usa-accordion__button.usa-nav__link[aria-expanded=true] span::after{
  -webkit-mask: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBmaWxsPSJub25lIiBkPSJNMCAwaDI0djI0SDB6Ii8+PHBhdGggZD0ibTEyIDgtNiA2IDEuNDEgMS40MUwxMiAxMC44M2w0LjU5IDQuNThMMTggMTR6Ii8+PC9zdmc+) no-repeat center/contain;
  mask: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBmaWxsPSJub25lIiBkPSJNMCAwaDI0djI0SDB6Ii8+PHBhdGggZD0ibTEyIDgtNiA2IDEuNDEgMS40MUwxMiAxMC44M2w0LjU5IDQuNThMMTggMTR6Ii8+PC9zdmc+) no-repeat center/contain;
}

// Allow all navigation items to take up the full content width

li.usa-nav__primary-item {
  width: max-content;

  // Todo: figure out how to get USWDS mixins to work here in this global file
  // @include at-media-max('desktop')
  @media screen and (max-width: 1024px) {
    width: unset;
  }
}

// This sets the alignment of the items in the scorecard dropdown nav
.usa-nav__submenu-item {
  padding-left: .5rem;
}



// remove the psuedo elements of the mega menu
.usa-nav__submenu.usa-megamenu::before, .usa-nav__submenu.usa-megamenu::after {
  display: none;
}

// these two all for non-dropdown nav links to activate on hover
li.usa-nav__primary-item a {
  display: block;
  position: relative;
}
li.usa-nav__primary-item a:hover::after{
  background-color: #005ea2;
  border-radius: 0;
  content: "";
  display: block;
  position: absolute;
  height: 0.25rem;
  left: 1rem;
  right: 1rem;
  bottom: -0.25rem;
}

// Remove bottom-border on navbar
.usa-header {
  +.usa-section,
  +main {
    border-top-width: 0;
  }
}

// Scorecard styles
.scorecard-header2 {
  padding-top: 32px;
  padding-bottom: 6px;
  border-bottom: 1px solid #e8e8f0;
}

.vertical-align-top {
  vertical-align: top;
}

.submetric {
  padding-left: 2rem !important;
}

.download-scorecard {
  margin-top: 20px;
}

// Card styles
.usa-card__footer {
  align-self: center;
}

// Scorecard Agency progress header
.scorecard-header-span {
  padding-top: 31px;
  padding-left: 10px;
}

//Agency progress cards
.agency-progress-section {
  display: flex;
  flex-wrap: wrap;

  div.agency-card {
    display: flex;
    flex-direction: column;
    width: 280px;
    min-height: 200px;
    justify-content: center;
    align-items: center;
    border: 1px solid rgb(238, 238, 238);

    &:hover,
    &:focus {
      transform: scale3d(1.006, 1.006, 1);
      border: 1px solid black;
      cursor: pointer;
      
      &::after {
        opacity: 1;
      }
    }

    .agency-name {
      margin-top: 12px;
    }
  }
}

.usa-card-group {
  margin-top: 16px;
}


/* 
******************************
*      FOOTER STYLES
****************************** 
*/ 
.app-footer {
  margin-top: 32px;
    
  .usa-footer__primary-section{
    padding-top: 16px;
    padding-bottom: 16px;
  }

  .j40-footer-address {
    .usa-footer__contact-info {
      display: inline-block;

      .grid-col-auto {
        margin-top: 6px;
      } 
      // @include typeset('sans', 4, 5); 
      // @include u-text('normal');  
    }
  }
  
  .footer-link-first-child{
    display: inline-block;
    margin-top: 12px;
  }

  // external links in the footer only
  .usa-link--external::after {
    margin-top: .2ex !important;
  }
}

